--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.0",
     "js-cookie": "^3.0.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
